Fix dynamic rollouts when there are finished actions from previous rollouts
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>