@@ -12,7 +12,6 @@ package org.eclipse.hawkbit.repository.jpa.management;
 import static org.eclipse.hawkbit.repository.jpa.JpaManagementHelper.combineWithAnd;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -135,7 +134,6 @@ public class JpaTargetManagement implements TargetManagement {
     @Override
     public long countByAssignedDistributionSet(final long distributionSetId) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException((distributionSetId));
-
         return targetRepository.count(TargetSpecifications.hasAssignedDistributionSet(validDistSet.getId()));
     }
 
@@ -148,29 +146,29 @@ public class JpaTargetManagement implements TargetManagement {
     @Override
     public long countByInstalledDistributionSet(final long distributionSetId) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException((distributionSetId));
-
         return targetRepository.count(TargetSpecifications.hasInstalledDistributionSet(validDistSet.getId()));
     }
 
     @Override
     public boolean existsByInstalledOrAssignedDistributionSet(final long distributionSetId) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException((distributionSetId));
-
-        return targetRepository
-                .exists(TargetSpecifications.hasInstalledOrAssignedDistributionSet(validDistSet.getId()));
+        return targetRepository.exists(TargetSpecifications.hasInstalledOrAssignedDistributionSet(validDistSet.getId()));
     }
 
     @Override
     public long countByRsql(final String targetFilterQuery) {
-        return JpaManagementHelper.countBySpec(targetRepository, List.of(RSQLUtility
-                .buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database)));
+        return JpaManagementHelper.countBySpec(
+                targetRepository,
+                List.of(RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database)));
     }
 
     @Override
     public long countByRsqlAndUpdatable(String targetFilterQuery) {
-        final List<Specification<JpaTarget>> specList = List.of(RSQLUtility.buildRsqlSpecification(targetFilterQuery,
-                TargetFields.class, virtualPropertyReplacer, database));
-        return targetRepository.count(AccessController.Operation.UPDATE, combineWithAnd(specList));
+        final List<Specification<JpaTarget>> specList = List.of(
+                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database));
+        return targetRepository.count(
+                AccessController.Operation.UPDATE,
+                combineWithAnd(specList));
     }
 
     @Override
@@ -197,7 +195,8 @@ public class JpaTargetManagement implements TargetManagement {
 
     @Override
     public long countByTargetFilterQuery(final long targetFilterQueryId) {
-        final TargetFilterQuery targetFilterQuery = targetFilterQueryRepository.findById(targetFilterQueryId)
+        final TargetFilterQuery targetFilterQuery = targetFilterQueryRepository
+                .findById(targetFilterQueryId)
                 .orElseThrow(() -> new EntityNotFoundException(TargetFilterQuery.class, targetFilterQueryId));
         return countByRsql(targetFilterQuery.getQuery());
     }
@@ -221,8 +220,7 @@ public class JpaTargetManagement implements TargetManagement {
     @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
             backoff = @Backoff(delay = Constants.TX_RT_DELAY))
     public List<Target> create(final Collection<TargetCreate> targets) {
-        final List<JpaTarget> targetList = targets.stream().map(JpaTargetCreate.class::cast).map(JpaTargetCreate::build)
-                .toList();
+        final List<JpaTarget> targetList = targets.stream().map(JpaTargetCreate.class::cast).map(JpaTargetCreate::build).toList();
         return Collections.unmodifiableList(targetRepository.saveAll(AccessController.Operation.CREATE, targetList));
     }
 
@@ -236,7 +234,6 @@ public class JpaTargetManagement implements TargetManagement {
             throw new EntityNotFoundException(Target.class, ids,
                     targets.stream().map(Target::getId).filter(id -> !ids.contains(id)).toList());
         }
-
         targetRepository.deleteAll(targets);
     }
 
@@ -255,10 +252,10 @@ public class JpaTargetManagement implements TargetManagement {
         final Long distSetTypeId = jpaDistributionSet.getType().getId();
 
         return targetRepository
-                .findAllWithoutCount(AccessController.Operation.UPDATE,
+                .findAllWithoutCount(
+                        AccessController.Operation.UPDATE,
                         combineWithAnd(List.of(
-                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class,
-                                        virtualPropertyReplacer, database),
+                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database),
                                 TargetSpecifications.hasNotDistributionSetInActions(distributionSetId),
                                 TargetSpecifications.isCompatibleWithDistributionSetType(distSetTypeId))),
                         pageRequest)
@@ -266,8 +263,7 @@ public class JpaTargetManagement implements TargetManagement {
     }
 
     @Override
-    public long countByRsqlAndNonDSAndCompatibleAndUpdatable(final long distributionSetId,
-            final String targetFilterQuery) {
+    public long countByRsqlAndNonDSAndCompatibleAndUpdatable(final long distributionSetId, final String targetFilterQuery) {
         final DistributionSet jpaDistributionSet = distributionSetManagement.getOrElseThrowException(distributionSetId);
         final Long distSetTypeId = jpaDistributionSet.getType().getId();
 
@@ -281,14 +277,12 @@ public class JpaTargetManagement implements TargetManagement {
     }
 
     @Override
-    public Slice<Target> findByTargetFilterQueryAndNotInRolloutGroupsAndCompatibleAndUpdatable(
-            final Pageable pageRequest, final Collection<Long> groups, final String targetFilterQuery,
-            final DistributionSetType dsType) {
+    public Slice<Target> findByTargetFilterQueryAndNotInRolloutAndCompatibleAndUpdatable(
+            final Pageable pageRequest, final Collection<Long> groups, final String targetFilterQuery, final DistributionSetType dsType) {
         return targetRepository
                 .findAllWithoutCount(AccessController.Operation.UPDATE,
                         combineWithAnd(List.of(
-                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class,
-                                        virtualPropertyReplacer, database),
+                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database),
                                 TargetSpecifications.isNotInRolloutGroups(groups),
                                 TargetSpecifications.isCompatibleWithDistributionSetType(dsType.getId()))),
                         pageRequest)
@@ -296,16 +290,14 @@ public class JpaTargetManagement implements TargetManagement {
     }
 
     @Override
-    public Slice<Target> findByNotInGEGroupAndNotInActiveActionGEWeightOrInRolloutAndTargetFilterQueryAndCompatibleAndUpdatable(
+    public Slice<Target> findByTargetFilterQueryAndNoOverridingActionsAndNotInRolloutAndCompatibleAndUpdatable(
             final Pageable pageRequest, final long rolloutId, final int weight, final long firstGroupId, final String targetFilterQuery,
             final DistributionSetType distributionSetType) {
         return targetRepository
                 .findAllWithoutCount(AccessController.Operation.UPDATE,
                         combineWithAnd(List.of(
-                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class,
-                                        virtualPropertyReplacer, database),
-                                TargetSpecifications.isNotInGERolloutGroup(firstGroupId),
-                                TargetSpecifications.hasNoActiveActionWithGEWeightOrInRollout(weight, rolloutId),
+                                RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database),
+                                TargetSpecifications.hasNoOverridingActionsAndNotInRollout(weight, rolloutId),
                                 TargetSpecifications.isCompatibleWithDistributionSetType(distributionSetType.getId()))),
                         pageRequest)
                 .map(Target.class::cast);
@@ -319,7 +311,7 @@ public class JpaTargetManagement implements TargetManagement {
     @Override
     public Slice<Target> findByFailedRolloutAndNotInRolloutGroups(Pageable pageRequest, Collection<Long> groups,
             String rolloutId) {
-        final List<Specification<JpaTarget>> specList = Arrays.asList(
+        final List<Specification<JpaTarget>> specList = List.of(
                 TargetSpecifications.failedActionsForRollout(rolloutId),
                 TargetSpecifications.isNotInRolloutGroups(groups));
 
@@ -327,22 +319,20 @@ public class JpaTargetManagement implements TargetManagement {
     }
 
     @Override
-    public long countByRsqlAndNotInRolloutGroupsAndCompatibleAndUpdatable(final String targetFilterQuery, final Collection<Long> groups,
-            final DistributionSetType dsType) {
+    public long countByRsqlAndNotInRolloutGroupsAndCompatibleAndUpdatable(
+            final String targetFilterQuery, final Collection<Long> groups, final DistributionSetType dsType) {
         return targetRepository.count(AccessController.Operation.UPDATE,
                 combineWithAnd(List.of(
-                        RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class,
-                                virtualPropertyReplacer, database),
+                        RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database),
                         TargetSpecifications.isNotInRolloutGroups(groups),
                         TargetSpecifications.isCompatibleWithDistributionSetType(dsType.getId()))));
     }
 
     @Override
     public long countByFailedRolloutAndNotInRolloutGroups(String rolloutId, Collection<Long> groups) {
-        final List<Specification<JpaTarget>> specList = Arrays.asList(
+        final List<Specification<JpaTarget>> specList = List.of(
                 TargetSpecifications.failedActionsForRollout(rolloutId),
                 TargetSpecifications.isNotInRolloutGroups(groups));
-
         return JpaManagementHelper.countBySpec(targetRepository, specList);
     }
 
@@ -352,22 +342,21 @@ public class JpaTargetManagement implements TargetManagement {
             throw new EntityNotFoundException(RolloutGroup.class, group);
         }
 
-        return JpaManagementHelper.findAllWithoutCountBySpec(targetRepository, pageRequest,
-                List.of(TargetSpecifications.hasNoActionInRolloutGroup(group)));
+        return JpaManagementHelper.findAllWithoutCountBySpec(
+                targetRepository, pageRequest, List.of(TargetSpecifications.hasNoActionInRolloutGroup(group)));
     }
 
     @Override
     public Page<Target> findByAssignedDistributionSet(final Pageable pageReq, final long distributionSetId) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException(distributionSetId);
 
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository,
-                List.of(TargetSpecifications.hasAssignedDistributionSet(validDistSet.getId())), pageReq
-        );
+        return JpaManagementHelper.findAllWithCountBySpec(
+                targetRepository,
+                List.of(TargetSpecifications.hasAssignedDistributionSet(validDistSet.getId())), pageReq);
     }
 
     @Override
-    public Page<Target> findByAssignedDistributionSetAndRsql(final Pageable pageReq, final long distributionSetId,
-            final String rsqlParam) {
+    public Page<Target> findByAssignedDistributionSetAndRsql(final Pageable pageReq, final long distributionSetId, final String rsqlParam) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException(distributionSetId);
 
         final List<Specification<JpaTarget>> specList = List.of(
@@ -379,8 +368,7 @@ public class JpaTargetManagement implements TargetManagement {
 
     @Override
     public List<Target> getByControllerID(final Collection<String> controllerIDs) {
-        return Collections.unmodifiableList(
-                targetRepository.findAll(TargetSpecifications.byControllerIdWithAssignedDsInJoin(controllerIDs)));
+        return Collections.unmodifiableList(targetRepository.findAll(TargetSpecifications.byControllerIdWithAssignedDsInJoin(controllerIDs)));
     }
 
     @Override
@@ -403,14 +391,12 @@ public class JpaTargetManagement implements TargetManagement {
     public Page<Target> findByInstalledDistributionSet(final Pageable pageReq, final long distributionSetId) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException(distributionSetId);
 
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository,
-                List.of(TargetSpecifications.hasInstalledDistributionSet(validDistSet.getId())), pageReq
-        );
+        return JpaManagementHelper.findAllWithCountBySpec(
+                targetRepository, List.of(TargetSpecifications.hasInstalledDistributionSet(validDistSet.getId())), pageReq);
     }
 
     @Override
-    public Page<Target> findByInstalledDistributionSetAndRsql(final Pageable pageable, final long distributionSetId,
-            final String rsqlParam) {
+    public Page<Target> findByInstalledDistributionSetAndRsql(final Pageable pageable, final long distributionSetId, final String rsqlParam) {
         final DistributionSet validDistSet = distributionSetManagement.getOrElseThrowException(distributionSetId);
 
         final List<Specification<JpaTarget>> specList = List.of(
@@ -422,9 +408,8 @@ public class JpaTargetManagement implements TargetManagement {
 
     @Override
     public Page<Target> findByUpdateStatus(final Pageable pageable, final TargetUpdateStatus status) {
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, List.of(TargetSpecifications.hasTargetUpdateStatus(status)),
-                pageable
-        );
+        return JpaManagementHelper.findAllWithCountBySpec(
+                targetRepository, List.of(TargetSpecifications.hasTargetUpdateStatus(status)), pageable);
     }
 
     @Override
@@ -434,8 +419,9 @@ public class JpaTargetManagement implements TargetManagement {
 
     @Override
     public Slice<Target> findByRsql(final Pageable pageable, final String targetFilterQuery) {
-        return JpaManagementHelper.findAllWithoutCountBySpec(targetRepository, pageable, List.of(RSQLUtility
-                .buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database)));
+        return JpaManagementHelper.findAllWithoutCountBySpec(
+                targetRepository, pageable,
+                List.of(RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database)));
     }
 
     @Override
@@ -443,24 +429,23 @@ public class JpaTargetManagement implements TargetManagement {
         final TargetFilterQuery targetFilterQuery = targetFilterQueryRepository.findById(targetFilterQueryId)
                 .orElseThrow(() -> new EntityNotFoundException(TargetFilterQuery.class, targetFilterQueryId));
 
-        return JpaManagementHelper.findAllWithoutCountBySpec(targetRepository, pageable,
-                List.of(RSQLUtility.buildRsqlSpecification(targetFilterQuery.getQuery(), TargetFields.class,
-                        virtualPropertyReplacer, database)));
+        return JpaManagementHelper.findAllWithoutCountBySpec(
+                targetRepository, pageable,
+                List.of(RSQLUtility.buildRsqlSpecification(
+                        targetFilterQuery.getQuery(), TargetFields.class, virtualPropertyReplacer, database)));
     }
 
     @Override
     public Page<Target> findByTag(final Pageable pageable, final long tagId) {
         throwEntityNotFoundExceptionIfTagDoesNotExist(tagId);
-
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, List.of(TargetSpecifications.hasTag(tagId)), pageable
-        );
+        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, List.of(TargetSpecifications.hasTag(tagId)), pageable);
     }
 
     @Override
     public Page<Target> findByRsqlAndTag(final Pageable pageable, final String rsqlParam, final long tagId) {
         throwEntityNotFoundExceptionIfTagDoesNotExist(tagId);
 
-        final List<Specification<JpaTarget>> specList = Arrays.asList(
+        final List<Specification<JpaTarget>> specList = List.of(
                 RSQLUtility.buildRsqlSpecification(rsqlParam, TargetFields.class, virtualPropertyReplacer, database),
                 TargetSpecifications.hasTag(tagId));
 
@@ -472,20 +457,19 @@ public class JpaTargetManagement implements TargetManagement {
     @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
             backoff = @Backoff(delay = Constants.TX_RT_DELAY))
     public TargetTypeAssignmentResult assignType(final Collection<String> controllerIds, final Long typeId) {
-        final JpaTargetType type = targetTypeRepository.findById(typeId)
+        final JpaTargetType type = targetTypeRepository
+                .findById(typeId)
                 .orElseThrow(() -> new EntityNotFoundException(TargetType.class, typeId));
 
-        final List<JpaTarget> targetsWithSameType = findTargetsByInSpecification(controllerIds,
-                TargetSpecifications.hasTargetType(typeId));
-
-        final List<JpaTarget> targetsWithoutSameType = findTargetsByInSpecification(controllerIds,
-                TargetSpecifications.hasTargetTypeNot(typeId));
+        final List<JpaTarget> targetsWithSameType = findTargetsByInSpecification(controllerIds, TargetSpecifications.hasTargetType(typeId));
+        final List<JpaTarget> targetsWithoutSameType =
+                findTargetsByInSpecification(controllerIds, TargetSpecifications.hasTargetTypeNot(typeId));
 
         // set new target type to all targets without that type
         targetsWithoutSameType.forEach(target -> target.setTargetType(type));
 
-        final TargetTypeAssignmentResult result = new TargetTypeAssignmentResult(targetsWithSameType.size(),
-                targetRepository.saveAll(targetsWithoutSameType), Collections.emptyList(), type);
+        final TargetTypeAssignmentResult result = new TargetTypeAssignmentResult(
+                targetsWithSameType.size(), targetRepository.saveAll(targetsWithoutSameType), Collections.emptyList(), type);
 
         // no reason to persist the type
         entityManager.detach(type);
@@ -500,8 +484,7 @@ public class JpaTargetManagement implements TargetManagement {
         final List<JpaTarget> allTargets = findTargetsByInSpecification(controllerIds, null);
 
         if (allTargets.size() < controllerIds.size()) {
-            throw new EntityNotFoundException(Target.class, controllerIds,
-                    allTargets.stream().map(Target::getControllerId).toList());
+            throw new EntityNotFoundException(Target.class, controllerIds, allTargets.stream().map(Target::getControllerId).toList());
         }
 
         // set new target type to null for all targets
@@ -514,8 +497,8 @@ public class JpaTargetManagement implements TargetManagement {
     @Transactional
     @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
             backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public List<Target> assignTag(final Collection<String> controllerIds, final long targetTagId,
-            final Consumer<Collection<String>> notFoundHandler) {
+    public List<Target> assignTag(
+            final Collection<String> controllerIds, final long targetTagId, final Consumer<Collection<String>> notFoundHandler) {
         return assignTag0(controllerIds, targetTagId, notFoundHandler);
     }
 
@@ -527,8 +510,8 @@ public class JpaTargetManagement implements TargetManagement {
         return assignTag0(controllerIds, targetTagId, null);
     }
 
-    private List<Target> assignTag0(final Collection<String> controllerIds, final long targetTagId,
-            final Consumer<Collection<String>> notFoundHandler) {
+    private List<Target> assignTag0(
+            final Collection<String> controllerIds, final long targetTagId, final Consumer<Collection<String>> notFoundHandler) {
         return updateTag(controllerIds, targetTagId, notFoundHandler, (tag, target) -> {
             if (target.getTags().contains(tag)) {
                 return target;
@@ -543,8 +526,8 @@ public class JpaTargetManagement implements TargetManagement {
     @Transactional
     @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
             backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public List<Target> unassignTag(final Collection<String> controllerIds, final long targetTagId,
-            final Consumer<Collection<String>> notFoundHandler) {
+    public List<Target> unassignTag(
+            final Collection<String> controllerIds, final long targetTagId, final Consumer<Collection<String>> notFoundHandler) {
         return unassignTag0(controllerIds, targetTagId, notFoundHandler);
     }
 
@@ -556,8 +539,8 @@ public class JpaTargetManagement implements TargetManagement {
         return unassignTag0(controllerIds, targetTagId, null);
     }
 
-    private List<Target> unassignTag0(final Collection<String> controllerIds, final long targetTagId,
-            final Consumer<Collection<String>> notFoundHandler) {
+    private List<Target> unassignTag0(
+            final Collection<String> controllerIds, final long targetTagId, final Consumer<Collection<String>> notFoundHandler) {
         return updateTag(controllerIds, targetTagId, notFoundHandler, (tag, target) -> {
             if (target.getTags().contains(tag)) {
                 target.removeTag(tag);
@@ -630,13 +613,13 @@ public class JpaTargetManagement implements TargetManagement {
     }
 
     @Override
-    public boolean isTargetMatchingQueryAndDSNotAssignedAndCompatibleAndUpdatable(final String controllerId,
-            final long distributionSetId, final String targetFilterQuery) {
+    public boolean isTargetMatchingQueryAndDSNotAssignedAndCompatibleAndUpdatable(
+            final String controllerId, final long distributionSetId, final String targetFilterQuery) {
         RSQLUtility.validateRsqlFor(targetFilterQuery, TargetFields.class, JpaTarget.class, virtualPropertyReplacer, entityManager);
         final DistributionSet ds = distributionSetManagement.get(distributionSetId)
                 .orElseThrow(() -> new EntityNotFoundException(DistributionSet.class, distributionSetId));
         final Long distSetTypeId = ds.getType().getId();
-        final List<Specification<JpaTarget>> specList = Arrays.asList(
+        final List<Specification<JpaTarget>> specList = List.of(
                 RSQLUtility.buildRsqlSpecification(targetFilterQuery, TargetFields.class, virtualPropertyReplacer, database),
                 TargetSpecifications.hasNotDistributionSetInActions(distributionSetId),
                 TargetSpecifications.isCompatibleWithDistributionSetType(distSetTypeId),
@@ -830,8 +813,7 @@ public class JpaTargetManagement implements TargetManagement {
         return specList;
     }
 
-    private List<JpaTarget> findTargetsByInSpecification(final Collection<String> controllerIds,
-            final Specification<JpaTarget> specification) {
+    private List<JpaTarget> findTargetsByInSpecification(final Collection<String> controllerIds, final Specification<JpaTarget> specification) {
         return ListUtils.partition(new ArrayList<>(controllerIds), Constants.MAX_ENTRIES_IN_STATEMENT).stream()
                 .map(ids -> targetRepository.findAll(TargetSpecifications.hasControllerIdIn(ids).and(specification)))
                 .flatMap(List::stream).toList();
